force-app/main/default/objects/OCE__AccountPlan__c/OCE__AccountPlan__c.object-meta.xml
<CustomObject>
    <description>Planning for Accounts.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>