force-app/main/default/objects/OCE__AccountPlan__c/fields/Is_Market_Access_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Market_Access_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Market Access Plan</label>
    <type>Checkbox</type>
</CustomField>