force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Approver3__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagement_Plan3</relationshipName>
    <type>Lookup</type>
</CustomField>