force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Approver5__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approver5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagement_Plan5</relationshipName>
    <type>Lookup</type>
</CustomField>