force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Approver_4__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approver_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagement_Plan4</relationshipName>
    <type>Lookup</type>
</CustomField>