force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Approver__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Approver__c</fullName>
    <formula>OR(
IF( Lilly_Approver_1__c !=null &amp;&amp; Lilly_Approver_1__c =  $User.Id,true,false),
IF( Lilly_Approver_2__c !=null &amp;&amp; Lilly_Approver_2__c =  $User.Id,true,false),
IF( Lilly_Approver3__c !=null &amp;&amp; Lilly_Approver3__c =  $User.Id,true,false),
IF( Lilly_Approver_4__c !=null &amp;&amp; Lilly_Approver_4__c =  $User.Id,true,false),
IF( Lilly_Approver5__c !=null &amp;&amp; Lilly_Approver5__c =  $User.Id,true,false),
IF( Lilly_Approver_6__c !=null &amp;&amp; Lilly_Approver_6__c =  $User.Id,true,false),
IF( Lilly_Approver_7__c !=null &amp;&amp; Lilly_Approver_7__c =  $User.Id,true,false),
IF( Lilly_Approver_8__c !=null &amp;&amp; Lilly_Approver_8__c =  $User.Id,true,false)
)</formula>
    <label>Approver</label>
    <type>Checkbox</type>
</CustomField>