force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Business_Need_Counts__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Business_Need_Counts__c</fullName>
    <label>Business Need Counts</label>
    <summaryForeignKey>OCE__AccountObjective__c.OCE__AccountPlan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>