force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>IBU</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>