force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Engagement_Plan_Name_LocalLanguage__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Engagement_Plan_Name_LocalLanguage__c</fullName>
    <label>Engagement Plan Name (Local Language)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>