force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Initial_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Initial_Approval_Date__c</fullName>
    <label>Initial Approval Date</label>
    <type>Date</type>
</CustomField>