force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Plan_Source__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Plan_Source__c</fullName>
    <label>Plan Source</label>
    <type>TextArea</type>
</CustomField>