force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Plan_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Plan_Therapeutic_Area__c</fullName>
    <label>Plan Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Plan Therapeutic</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>