force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_UserContext__c.field-meta.xml
<CustomField>
    <fullName>Lilly_UserContext__c</fullName>
    <formula>IF( OwnerId =$User.Id, true, false)</formula>
    <label>UserContext</label>
    <type>Checkbox</type>
</CustomField>