force-app/main/default/objects/OCE__AccountPlan__c/fields/Lilly_Year__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Year__c</fullName>
    <formula>TEXT(YEAR( OCE__StartDate__c ))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>