force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE1__CalculatedPromoPlanType__c.field-meta.xml
<CustomField>
    <fullName>OCE1__CalculatedPromoPlanType__c</fullName>
    <description>Type of the Promo Plan calculated based on populated fields (MVP)</description>
    <formula>IF(
     OR(
        AND ( NOT( ISBLANK( OCE__Account__c ) ), ISBLANK(  OCE1__PurchasingGroup__c ), NOT( ISBLANK(  OCE1__ClusterAttributes__c  ) ) ),
        AND ( ISBLANK( OCE__Account__c ), NOT( ISBLANK(  OCE1__PurchasingGroup__c ) ), ISBLANK(  OCE1__ClusterAttributes__c  ) ),
        AND ( ISBLANK( OCE__Account__c ), NOT( ISBLANK(  OCE1__PurchasingGroup__c ) ), NOT( ISBLANK(  OCE1__ClusterAttributes__c  ) ) ),
        AND ( ISBLANK( OCE__Account__c ), ISBLANK(  OCE1__PurchasingGroup__c ), ISBLANK(  OCE1__ClusterAttributes__c  ) )
     ), 
     &quot;&quot;, 
     IF(
        AND ( NOT( ISBLANK( OCE__Account__c ) ), ISBLANK(  OCE1__PurchasingGroup__c ),  ISBLANK(  OCE1__ClusterAttributes__c  ) ), 
        &quot;Pharmacy Promo Plan&quot;, 
        IF(
           OR(
              AND ( NOT( ISBLANK( OCE__Account__c ) ), NOT ( ISBLANK(  OCE1__PurchasingGroup__c ) ), ISBLANK(  OCE1__ClusterAttributes__c  ) ),
              AND ( NOT( ISBLANK( OCE__Account__c ) ), NOT ( ISBLANK(  OCE1__PurchasingGroup__c ) ), NOT( ISBLANK(  OCE1__ClusterAttributes__c  ) ) )
           ), 
           &quot;Purchasing Group Promo Plan&quot;, 
           IF(
              AND ( ISBLANK( OCE__Account__c ), ISBLANK(  OCE1__PurchasingGroup__c ), NOT( ISBLANK(  OCE1__ClusterAttributes__c  ) ) ), 
              &quot;Cycle Promo Plan&quot;,
              &quot;&quot;
           ) 
        ) 
     ) 
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type of the Promo Plan calculated based on populated fields</inlineHelpText>
    <label>Promo Plan Type</label>
    <type>Text</type>
</CustomField>