force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE1__ClusterAttributes__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClusterAttributes__c</fullName>
    <description>Attributes assigned to the plan or template (MVP)</description>
    <inlineHelpText>Attributes assigned to the plan or template</inlineHelpText>
    <label>Cluster Attributes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>