force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE1__PromoPlanRecordType__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PromoPlanRecordType__c</fullName>
    <description>Record Type name for a Promo Plan created from the template (MVP)</description>
    <inlineHelpText>Record Type name for a Promo Plan created from the template</inlineHelpText>
    <label>Promo Plan Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promo Plan</fullName>
                <default>true</default>
                <label>Promo Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>