force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE1__PurchasingGroup__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PurchasingGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to an active formal Account Group where Lead Account is the plan Account (MVP)</description>
    <inlineHelpText>Link to an active formal Account Group where Lead Account is the plan Account</inlineHelpText>
    <label>Purchasing Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__AccountGroup__c.OCE__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>OCE__AccountGroup__c.OCE__LeadAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.OCE__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__AccountGroup__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>