force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE1__Template__c.field-meta.xml
<CustomField>
    <fullName>OCE1__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source of the record if it was created from Template (MVP)</description>
    <inlineHelpText>Source of the record if it was created from Template</inlineHelpText>
    <label>Template</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>