force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Linked Account ( from Account plan)</description>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>AccountPlan</relationshipName>
    <type>Lookup</type>
</CustomField>