force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__ApprovedStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ApprovedStatus__c</fullName>
    <description>Status that is changed by approval process in Business Objective look up is populated.</description>
    <label>Approved Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <isActive>false</isActive>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>