force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__BusinessObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessObjective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Business Objective.</description>
    <label>Business Objective</label>
    <referenceTo>OCE__BusinessObjective__c</referenceTo>
    <relationshipLabel>Account Plans</relationshipLabel>
    <relationshipName>AccountPlans</relationshipName>
    <type>Lookup</type>
</CustomField>