force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Completed__c.field-meta.xml
<CustomField>
    <fullName>OCE__Completed__c</fullName>
    <description>Percentage of Account Plan completion.</description>
    <label>Completed %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>