force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__ContactCountryRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ContactCountryRef__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Denormalized Contact Country (MVP)</description>
    <label>Contact Country Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>