force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>Account Plan end date.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>