force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Account plan Active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>