force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__OfflineCreatedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User initiated record creation from mobile. Differ from standard SF CreatedById field, which holds user actually conducting operation in SF (could be the same as mobile, but not necessary)</description>
    <label>Offline Created By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountPlan</relationshipName>
    <type>Lookup</type>
</CustomField>