force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Opportunities__c.field-meta.xml
<CustomField>
    <fullName>OCE__Opportunities__c</fullName>
    <description>Page with Account Plan Opportunities.</description>
    <label>Opportunities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>