force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>OCE__PercentComplete__c</fullName>
    <description>Capture percentage of completion Account Plan/Account Objective/Account Tactic. Calculated in trigger based on completion of Account Objection/ Account Tactic/To-Do</description>
    <label>Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>