force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Status__c.field-meta.xml
<CustomField>
    <fullName>OCE__Status__c</fullName>
    <description>Status of Account Plan.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revisions/Additions</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#2F5D85</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#419249</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Defined</fullName>
                <isActive>false</isActive>
                <label>Defined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>