force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Strength__c.field-meta.xml
<CustomField>
    <fullName>OCE__Strength__c</fullName>
    <description>Strength of Account Plan.</description>
    <label>Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>