force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>The name of the Territory the Account belongs to. This is used so Reps can view information at both an Account and Territory level in this object.</description>
    <inlineHelpText>The name of the Territory the Account belongs to. This is used so Reps can view information at both an Account and Territory level in this object.</inlineHelpText>
    <label>Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>