force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Threats__c.field-meta.xml
<CustomField>
    <fullName>OCE__Threats__c</fullName>
    <description>Threats of Account Plan.</description>
    <label>Threats</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>