force-app/main/default/objects/OCE__AccountPlan__c/fields/OCE__Weakness__c.field-meta.xml
<CustomField>
    <fullName>OCE__Weakness__c</fullName>
    <description>Weaknesses of Account Plan.</description>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>