force-app/main/default/objects/OCE__AccountPlan__c/recordTypes/Engagement_Plan.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Plan</fullName>
    <active>true</active>
    <label>Engagement Plan</label>
</RecordType>