force-app/main/default/objects/OCE__AccountPlan__c/recordTypes/OCE1__AccountPlan.recordType-meta.xml
<RecordType>
    <fullName>OCE1__AccountPlan</fullName>
    <active>false</active>
    <description>Used for planning of activities in accounts or ecosystems according to objectives, tactics and todos</description>
    <label>Account Plan</label>
</RecordType>