force-app/main/default/objects/OCE__AccountPlan__c/recordTypes/OCE1__PromoPlan.recordType-meta.xml
<RecordType>
    <fullName>OCE1__PromoPlan</fullName>
    <active>false</active>
    <description>Used for planning of promotional activities that needs to occur in point of sales for one or many accounts</description>
    <label>Promo Plan</label>
</RecordType>