force-app/main/default/objects/OCE__AccountPlan__c/recordTypes/OCE1__PromoPlanTemplate.recordType-meta.xml
<RecordType>
    <fullName>OCE1__PromoPlanTemplate</fullName>
    <active>false</active>
    <description>Used as a source of activities to create other types of Promotional Plans</description>
    <label>Promo Plan Template</label>
</RecordType>