force-app/main/default/objects/OCE__AccountPlan__c/validationRules/OCE__AccountPlan_Account_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__AccountPlan_Account_Is_Required</fullName>
    <active>true</active>
    <description>User should complete the Account field if no permission that allow to create Account Plans without account reference</description>
    <errorConditionFormula>AND(
    ISBLANK( OCE__Account__c ),
    NOT( $Permission.OCE__AccountPlan_AllowEmptyAccount )
)</errorConditionFormula>
    <errorMessage>Account cannot be empty</errorMessage>
</ValidationRule>