force-app/main/default/objects/OCE__AccountPlan__c/listViews/Market_Access_Plans.listView-meta.xml
<ListView>
    <fullName>Market_Access_Plans</fullName>
    <columns>NAME</columns>
    <columns>Is_Market_Access_Plan__c</columns>
    <columns>OCE__Status__c</columns>
    <columns>OCE__Completed__c</columns>
    <columns>OCE__PercentComplete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Market_Access_Plan__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Market Access Plans</label>
</ListView>